--- a/src/views/base.twig
+++ b/src/views/base.twig
@@ -15,7 +15,7 @@
                     </h1>
                     <nav id="nav-main" class="nav-main" role="navigation">
                         <ul class="nav">
-                        {% for item in menu.get_items %}
+                        {% for item in header-menu.get_items %}
                             <li class="nav-item {{item.classes | join(' ')}}">
                                 <a class="nav-link" href="{{item.get_link}}">{{item.title}}</a>
                                 {% if item.get_children %}
