added a readme, new screenshot, version bump to v0.0.2

--- a/theme/style.css
+++ b/theme/style.css
@@ -1,7 +1,7 @@
 /*
- * Theme Name: Gwa Starter Theme
+ * Theme Name: Zero Starter Theme
  * Description: Starter Theme to use with Timber
  * Author: Gwa
  * Author URI: https://greatwhiteark.com/
- * Version: 0.0.1
+ * Version: 0.0.2
 */
