--- a/theme/views/page-plugin.twig
+++ b/theme/views/page-plugin.twig
@@ -1,4 +1,5 @@
-{% extends "base.twig" %}
+{% extends "base/base.twig" %}
+namespace
 
 {% block content %}
   <div class="container content-wrapper">
