--- a/theme/views/single-password.twig
+++ b/theme/views/single-password.twig
@@ -1,4 +1,5 @@
-{% extends "base.twig" %}
+{% extends "base/base.twig" %}
+namespace
 
 {% block content %}
     <form class="password-form" action="/wp-login.php?action=postpass" method="post">
