remove old templates

--- a/theme/views/base/base.twig
+++ b/theme/views/base/base.twig
@@ -35,7 +35,7 @@
 
         {% block footer %}
             <footer class="footer" role="contentinfo">
-                {% include 'footer.twig' %}
+                {% include 'base/footer.twig' %}
             </footer>
 
             {{ function('wp_footer') }}
