add grunt tasks to get all gettext | added to all files __() | remove some text

--- a/theme/views/single.twig
+++ b/theme/views/single.twig
@@ -1,5 +1,4 @@
 {% extends "base/base.twig" %}
-namespace
 
 {% block content %}
     <div class="content-wrapper">
@@ -7,7 +6,7 @@ namespace
             <section class="article-content">
                 <h1 class="article-h1">{{post.title}}</h1>
                 <p class="blog-author">
-                    <span>By</span><a href="{{post.author.path}}"> {{ post.author.name }} </a><span>&bull;</span> {{ post.post_date|date}}
+                    <span>{{ __('By:', 'zero') }}</span><a href="{{post.author.path}}"> {{ post.author.name }} </a><span>&bull;</span> {{ post.post_date|date}}
                 </p>
                 <div class="article-body">
                     {{post.content}}
@@ -15,7 +14,7 @@ namespace
             </section>
             <section class="comments">
                 <div class="respond">
-                    <h3 class="h2">Comments</h3>
+                    <h3 class="h2">{{ __('Comments:', 'zero') }}</h3>
                     {{ comment_form }}
                 </div>
                 <div class="responses">
