--- a/theme/views/base/html-header.twig
+++ b/theme/views/base/html-header.twig
@@ -22,4 +22,4 @@
 
     <link rel="stylesheet" href="{{site.theme.link}}/style.css" type="text/css" media="screen" />
 
-    {{function('wp_head')}}
+    {{function("wp_head")}}
