--- a/theme/views/sidebar.twig
+++ b/theme/views/sidebar.twig
@@ -1,1 +1,1 @@
-{{ __('Sidebar in Timber. Add HTML to your hearts content.', 'zero') }}
+{{ __("Sidebar in Timber. Add HTML to your hearts content.", "zero") }}
