--- a/theme/views/single-password.twig
+++ b/theme/views/single-password.twig
@@ -2,8 +2,8 @@
 
 {% block content %}
     <form class="password-form" action="/wp-login.php?action=postpass" method="post">
-        <label for="pwbox-{{post.ID}}">{{ __('Password:', 'zero') }}</label>
-        <input class="password-box" name="post_password" id="pwbox-{{post.ID}}" type="password" placeholder="{{ __('Password', 'zero') }}" size="20" maxlength="20" />
+        <label for="pwbox-{{post.ID}}">{{ __("Password:", "zero") }}</label>
+        <input class="password-box" name="post_password" id="pwbox-{{post.ID}}" type="password" placeholder="{{ __("Password", "zero") }}" size="20" maxlength="20" />
         <input class="password-btn" type="submit" name="Submit" value="Submit" />
     </form>
 {% endblock %}
