--- a/theme/views/comment.twig
+++ b/theme/views/comment.twig
@@ -1,4 +1,4 @@
 <div class="blog-comment {{comment.comment_type}}" id="blog-comment-{{comment.ID}}">
-    <h5 class="comment-author">{{comment.author.name}} {{ __('says', 'zero') }}</h5>
+    <h5 class="comment-author">{{comment.author.name}} {{ __("says", "zero") }}</h5>
     <div class="comment-content">{{comment.comment_content|wpautop}}</div>
 </div>
