--- a/theme/views/error-404.twig
+++ b/theme/views/error-404.twig
@@ -1,5 +1,5 @@
 {% extends "base/base.twig" %}
 
 {% block content %}
-   {{ __('Sorry, we couldn't find what you're looking for.', 'zero') }}
+   {{ __("Sorry, we couldn"t find what you"re looking for.", "zero") }}
 {% endblock %}
