--- a/theme/views/index.twig
+++ b/theme/views/index.twig
@@ -2,6 +2,6 @@
 
 {% block content %}
     {% for post in posts %}
-        {% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
+        {% include ["tease-"~post.post_type~".twig", "tease.twig"] %}
     {% endfor %}
 {% endblock %}
